# Clarity-FidelityFX-Super-Resolution

./: CMakeLists.txt  LICENSE.txt  README.md  build.bat
src/: CMakeLists.txt
src/Common/: CMakeLists.txt
src/DX12/: CMakeLists.txt  FSR2Sample.cpp
src/VK/: CMakeLists.txt  FSR2Sample.cpp
src/ffx-fsr2-api/: ffx_fsr2.cpp  ffx_fsr2.h  ffx_fsr2_private.h
src/ffx-fsr2-api/shaders/: ffx_fsr2_accumulate.h  ffx_fsr2_callbacks_hlsl.h  ffx_fsr2_compute_luminance_pyramid_pass_header.txt  ffx_fsr2_postprocess_lock_status.h
src/ffx-fsr2-api/vk/: CMakeCache.txt
tools/: build.bat
